# cmake_template

./: CMakeLists.txt
myapp/: CMakeLists.txt  generate_timestamp.cmake  timestamp.h.in
myapp/src/: main.cpp
